# idle-sense

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFESTO.md  README.md  REFACTORING_PLAN.md  USER_GUIDE.md  __init__.py  app_unified.py  audit.db  auto_start.py  check_nodes.py  code_quality_check.py  create_folders.py  demo_local_network.py  demo_web_interface.py  distributed_task.py  docker-compose.prod.yml  dockerfile  e  file_drop_and_recovery.py  file_scanner.py  install.bat  launch_gui.py  mypy.ini  pyproject.toml  quick_test.py  request_permission.py  requirements.txt  run_example.py  safebox_isolation.py  sandbox.py  setup.py  start.bat  start.py  start_all.bat  (+30 more)
.cache/: session_cache_571785de6d52bfd1.json  session_cache_86ac8926bd33e5ec.json
.github/workflows/: ci.yml
.trae/documents/: 单元测试添加计划.md  迁移计划-web_interface剩余功能.md
config/: .env.development  .env.example  .env.production  .env.production.example  .env.testing  __init__.py  config.yaml.example  config_manager.py  default_settings.py  settings.py
config/config/: default_settings.py
data/db/: idle_sense.db
data/sessions/: session_local_5a8ecec1.json
data/test_sessions/: session_test2.json
demo/: README.md  __init__.py  demo_local_network.py  demo_single_machine.py  demo_web_interface.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DESIGN_DECISIONS.md  FEDERATION.md  PERSISTENCE.md  QUICKSTART.md  VIDEO_SHOOTING_GUIDE.md
examples/: README.md  __init__.py  basic_usage.py  benchmark.py  data_processing.py  math_computation.py  simple_calculation.py  simulation.py
idle_sense/: __init__.py  core.py  macos.py  windows.py
idle_sense/idle_sense/: macos.py
legacy/: README.md  README_REFACTORED.md  auto_start.py  check_nodes.py  code_quality_check.py  create_folders.py  distributed_task.py  exceptions.py  file_drop_and_recovery.py  refactoring_plan.md  refactoring_plan_v2.md  refactoring_task_list.md  request_permission.py  safebox_isolation.py  sandbox.py  start_all.bat  start_windows.bat  submit_task.py  test_activation.py  test_node_status.py  test_registration.py  test_result.json  test_simple.py  test_task.py  test_uac.py  verification_report.py
legacy/api_docs/: __init__.py
legacy/benchmark/: __init__.py
legacy/cache/: __init__.py
legacy/callbacks/: __init__.py
legacy/checkpoint/: __init__.py
legacy/cli/: __init__.py
legacy/config_validator/: __init__.py
legacy/connection_pool/: __init__.py
legacy/demo/: README.md  __init__.py  demo_local_network.py  demo_single_machine.py  demo_web_interface.py
legacy/di/: __init__.py
legacy/diagnostics/: __init__.py
legacy/distributed_lock/: __init__.py
legacy/distributed_task_v2/: __init__.py  dag_engine.py  data_locality.py  fault_tolerance.py  progress_ws.py  shuffle.py
legacy/event_bus/: __init__.py
legacy/examples/: README.md  __init__.py  basic_usage.py  benchmark.py  data_processing.py  math_computation.py  simple_calculation.py  simulation.py
legacy/health_check/: __init__.py
legacy/idle_sense/: __init__.py  core.py  linux.py  macos.py  windows.py
legacy/integration/: __init__.py  integrator.py
legacy/load_balancer/: __init__.py
legacy/logging_config/: __init__.py
legacy/message_queue/: __init__.py
legacy/migration/: __init__.py
legacy/monitoring/: __init__.py
legacy/node/: __init__.py  base_client.py  p2p_client.py  simple_client.py  windows_client.py
legacy/node_data/: README.txt
legacy/p2p_network/: __init__.py  bandwidth.py  dht_replication.py  ipv6_support.py  reputation.py  security.py  stun.py  turn.py  websocket_pool.py
legacy/plugins/: __init__.py
legacy/priority_queue/: __init__.py
legacy/profiler/: __init__.py
legacy/rate_limiter/: __init__.py
legacy/resource_estimator/: __init__.py
legacy/result_aggregator/: __init__.py
legacy/retry_recovery/: __init__.py
legacy/retry_strategy/: __init__.py
legacy/sandbox_v2/: __init__.py
legacy/scheduler/: __init__.py  p2p_federation.py  p2p_scheduler.py  simple_server.py
legacy/scheduler_v2/: __init__.py  advanced_scheduler.py
legacy/storage/: __init__.py  backends.py  distributed.py
legacy/task_deps/: __init__.py
legacy/task_queue/: __init__.py
legacy/task_scheduler/: __init__.py
legacy/test_generator/: __init__.py
legacy/timeout_manager/: __init__.py
legacy/token_economy/: __init__.py
legacy/user_management/: __init__.py  auth.py  local_authorization.py  models.py  permission.py  quota.py
legacy/websocket_comm/: __init__.py
legacy/workflow/: __init__.py
local_users/: local_5a8ecec1.json  local_a4dc1317.json  local_e9c69031.json  local_fc2aa38c.json
node/: simple_client.py  windows_client.py
ruff/: ruff_report.txt  ruff_report_final.txt  ruff_report_new.txt  ruff_report_v2.txt  ruff_report_v3.txt  ruff_report_v4.txt  ruff_report_v5.txt  ruff_report_v6.txt  ruff_report_v7.txt  ruff_report_v8.txt
scheduler/: simple_server.py
scripts/: deploy_demo.sh  quick_test.py  setup_node.sh  setup_scheduler.sh
security_audit/: __init__.py
serializer/: __init__.py
src/: __init__.py
src/api/: __init__.py  node.py  scheduler.py  task.py  user.py
src/core/: __init__.py
src/di/: __init__.py  container.py
src/infrastructure/: __init__.py
src/presentation/: __init__.py
test/: test_activation.py  test_node_status.py  test_project_structure.py  test_registration.py  test_result.json  test_result2.json  test_sandbox.py  test_simple.py  test_system.py  test_task.py  test_uac.py
tests/: conftest.py  test_project_structure.py  test_sandbox_unified.py  test_scheduler_unified.py
tests/e2e/: test_fault_recovery.py  test_multi_node.py  test_system.py  test_token_economy_flow.py  test_user_flow.py
tests/integration/: test_data_persistence.py  test_e2e_distributed.py  test_integration.py  test_nat_traversal.py  test_task_flow.py  test_workflows.py
tests/unit/: test_advanced_scheduler.py  test_bandwidth.py  test_contribution_proof_service.py  (+33 more)
user_management/: __init__.py  api.py  auth.py  local_authorization.py  models.py  quota.py
(+127 files in other folders)
