[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idle-sense"
version = "0.1.0"
description = "Cross-platform idle state detection for computers"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "你的名字"},
    {name = "队友A名字"},
    {name = "队友B名字"}
]
requires-python = ">=3.8"

dependencies = [
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/Xing-Heyu/idle-sense"
Repository = "https://github.com/Xing-Heyu/idle-sense"
